# cosc140-miniproj-ahmed_flo_gabby

./: .breakpoints  .gitignore  PROPOSAL.txt  README.md  db.sqlite3  pyproject.toml
app/: admin.py  coords.py  forms.py  helpers.py  models.py  urls.py  views.py
app/fixtures/: seeds.yaml
app/migrations/: 0001_initial.py  0002_alter_tag_options.py
app/static/app/: details.css  details.js  login.css  review.css  sites.css  sites.js
app/templates/: base.html
app/templates/app/: details.html  index.html  review.html  show.html
app/templates/registration/: login.html
miniproj/: settings.py  urls.py
