[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>0.12"]

[tool]
[tool.poetry]
authors = ["Somebody <you@example.com>"]
description = ""
name = "miniproj"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^4.0"
python = "^3.8"
PyYAML = "^6.0"
django-crispy-forms = "^1.14.0"
[tool.poetry.dev-dependencies]
